--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/uuid": "^9.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
   }
