--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,20 @@
 version: "3.7"
 
 services:
+  db:
+    image: postgres
+    container_name: db_rentals
+    restart: always
+    ports:
+      - 5432:5432
+    environment:
+      - POSTGRES_USER=docker
+      - POSTGRES_PASSWORD=docker
+      - POSTGRES_DB=rentals-api
+    volumes:
+      - pgdata:/data/postgres
+    
+
   app:
     build: .
     container_name: rentals-api
@@ -8,3 +22,11 @@ services:
       - 3333:3333
     volumes:
       - .:/usr/app
+    links:
+      - db
+    depends_on:
+      - db
+
+volumes:
+  pgdata:
+    driver: local
