--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli -d src/database/index.ts"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js -d src/database/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.6.0",
+    "tsyringe": "^4.7.0",
     "typeorm": "^0.3.10",
     "uuid": "^9.0.0"
   },
