--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "dev": "ts-node-dev --inspect --poll --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
+    "dev": "ts-node-dev --inspect --poll --transpile-only --nolazy --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js -d src/shared/infra/typeorm/index.ts",
     "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
   },
